Add Security Config
